--- a/_posts/places/2013-08-01-point-97.md
+++ b/_posts/places/2013-08-01-point-97.md
@@ -10,3 +10,5 @@ zoom: 6
 blurb: Technology solutions and engagement strategies for marine &amp; coastal planning.
 ---
 {% include JB/setup %}
+Point 97, an Ecotrust company, delivers technology solutions and engagement strategies for coastal and marine planning in regions around the world. Working as a catalyst and partner in improving marine and coastal management practices, Point 97 provides solutions designed to help partners and clients: better connect people with place, bridge differing perspectives, and implement management decisions in an inclusive and transparent way.
+ 
