items from punch list

--- a/_posts/places/2013-08-01-point-97.md
+++ b/_posts/places/2013-08-01-point-97.md
@@ -7,7 +7,7 @@ tags: [place]
 lat: 45.5200
 lng: -122.6819
 zoom: 6
-blurb: Technology solutions and engagement strategies for marine &amp; coastal planning.
+blurb: "With 97% of the earth's water in the ocean, Point 97 delivers technology solutions and engagement strategies for coastal and marine planning in regions around the world."
 ---
 {% include JB/setup %}
 Point 97, an Ecotrust company, delivers technology solutions and engagement strategies for coastal and marine planning in regions around the world. Working as a catalyst and partner in improving marine and coastal management practices, Point 97 provides solutions designed to help partners and clients: better connect people with place, bridge differing perspectives, and implement management decisions in an inclusive and transparent way.
